--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "author": "Congwen",
   "main": "build/index.js",
   "devDependencies": {
-    "babel": "5.8.34",
-    "babel-core": "^6.5.2",
     "babel-loader": "^6.2.3",
     "babel-preset-es2015": "*",
     "es5-shim": "4.5.4",
@@ -27,5 +25,8 @@
     "phantomjs": "1.9.18",
     "webpack": "^1.12.13"
   },
-  "dependencies": {}
+  "scripts": {
+    "test": "babel-node spec/run.js",
+    "test:live": "find ./src ./spec | entr babel-node spec/run.js "
+  }
 }
